<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mainTitleText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotifyAppName"
        android:id="@+id/spotifyAppButton"
        android:layout_below="@+id/mainTitleText"
        android:onClick="openApp"
        style="@style/Button.Green" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footAppName"
        android:id="@+id/footAppButton"
        android:layout_below="@+id/spotifyAppButton"
        android:onClick="openApp"
        style="@style/Button.Blue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libAppName"
        android:id="@+id/libAppButton"
        android:layout_below="@+id/footAppButton"
        android:onClick="openApp"
        style="@style/Button.Blue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildAppName"
        android:id="@+id/buildAppButton"
        android:layout_below="@+id/libAppButton"
        android:onClick="openApp"
        style="@style/Button.Orange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyzAppName"
        android:id="@+id/xyzAppButton"
        android:layout_below="@+id/buildAppButton"
        android:onClick="openApp"
        style="@style/Button.Red" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstoneAppName"
        android:id="@+id/capstoneAppButton"
        android:layout_below="@+id/xyzAppButton"
        android:onClick="openApp"
        style="@style/Button.Black" />

</RelativeLayout>
